fe-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ui-deployment
  namespace: default
  labels:
    app:  ui
spec:
  selector:
    matchLabels:
      app: ui
  replicas: 2
  template:
    metadata:
      labels:
        app:  ui
    spec:
      containers:
      - name:  ui-pod
        image:  astelware/gr18:ui
        ports:
        - containerPort:  80
